@@ -23,15 +23,18 @@ class MyObject {
 
 public class ReferenceDemo {
     public static void main(String[] args) {
-        // strongReference();
-        // softReference();
-        // weakReference();
+//         strongReference();
+//         softReference();
+//         weakReference();
         phantomReference();
     }
 
     private static void softReference() {
+        // 设置JVM参数：-Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+PrintGCTimeStamps
+        System.out.println("JVM堆内存限制为10MB，测试软引用回收");
+        
         SoftReference<MyObject> softReference = new SoftReference<>(new MyObject());
-        // System.out.println(softReference.get());
+        System.out.println("软引用创建完成: " + softReference.get());
 
         System.gc();
 
@@ -41,15 +44,18 @@ public class ReferenceDemo {
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
-        System.out.println("gc 内存空间充足");
-        System.out.println(softReference.get());
+
+        System.out.println("第一次GC后，内存空间充足");
+        System.out.println("软引用对象仍然存在: " + softReference.get());
 
         try {
-            byte[] bytes = new byte[20 * 1024 * 1024]; // 20MB对象
-        } catch (Exception e) {
-            e.printStackTrace();
+            System.out.println("尝试分配10MB内存...");
+            byte[] bytes = new byte[10 * 1024 * 1024]; // 8MB对象
+            System.out.println("内存分配成功");
+        } catch (OutOfMemoryError e) {
+            System.out.println("内存不足异常: " + e.getMessage());
         } finally {
-            System.out.println("内存不够，gc 回收软引用" + softReference.get());
+            System.out.println("内存压力后，检查软引用状态: " + softReference.get());
         }
     }
 
@@ -57,6 +63,12 @@ public class ReferenceDemo {
         WeakReference<MyObject> weakReference = new WeakReference<>(new MyObject());
         System.out.println(weakReference.get());
         System.gc();
+        // 暂停一会儿线程
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
         System.out.println("gc 内存空间充足");
         System.out.println(weakReference.get());
     }
@@ -65,6 +77,7 @@ public class ReferenceDemo {
      * 虚引用
      */
     private static void phantomReference() {
+        // 设置JVM参数：-Xms10m -Xmx10m
         ReferenceQueue<MyObject> referenceQueue = new ReferenceQueue<>(); // Define the ReferenceQueue
         PhantomReference<MyObject> phantomReference = new PhantomReference<>(new MyObject(), referenceQueue);
         System.out.println("gc 内存空间充足");
@@ -98,7 +111,7 @@ public class ReferenceDemo {
 
     private static void strongReference() {
         MyObject myObject = new MyObject();
-        myObject = null;
+        System.out.println("gc1 之前");
         System.gc();
         // 暂停一会儿线程
         try {
@@ -106,6 +119,18 @@ public class ReferenceDemo {
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
-        System.out.println("第一次GC完成");
+        System.out.println("gc1 之后");
+
+        myObject = null; // 置空后才可回收
+
+        System.out.println("gc2 之前");
+        System.gc();
+        // 暂停一会儿线程
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        System.out.println("gc2 之后");
     }
 }
